tests/paczka1/small_fuzzy/73184265.err
Error in line 1: Qq8laI A318 10,8
Error in line 10: Qq8laI S873 90,1
Error in line 11: A173 A173 29,4
